<resources>
    <string name="app_name">Cardapio Lunch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_cliente">menu_cliente</string>
    <string name="title_activity_ofertas">ofertas</string>
    <string name="title_activity_pedidos">pedidos</string>
    <string name="title_activity_login">Login</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha:</string>
    <string name="manter_conectado">Manter Conectado</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="erro_autenticao">Falha na autenticação!</string>
    <string name="avaliar_estabelecimento">Avaliar Estabelecimento</string>
    <string name="perfil">Perfil</string>
    <string name="fazer_pedido">Fazer Pedido</string>
    <string name="acompanhar_pedido">Acompanhar Pedido</string>
    <string name="desconto">Desconto</string>
    <string name="ofertas">Ofertas</string>
    <string name="title_activity_produtos_list">Lista de Produtos</string>
    <string name="title_activity_pedidos_list">Lista de Pedidos</string>
    <string name="title_activity_pedidos_confirmardos_list">Acompanhamento de Pedidos</string>
    <string name="avancar">Avançar</string>
    <string name="adicionar">Adicionar</string>
    <string name="title_activity_checkout_pedidos">Checkout Pedidos</string>
    <string name="title_activity_list_view_android_example">ListViewAndroidExample</string>
    <string name="confirmar">Confirmar</string>
    <string name="title_activity_welcome">Welcome_Activity</string>
    <string name="title_activity_select">SelectActivity</string>
    <string name="title_activity_main_cliente">MainClienteActivity</string>
    <string name="title_activity_rodape_">Rodape_Activity</string>
    <string name="garcom">Garçom</string>
    <string name="cozinheiro">Conzinheiro</string>
    <string name="cadastrar">Cadastrar?</string>
    <string name="messagemerrologin">Usuario e/ou Senha Incorreta(s)!</string>
    <string name="inserir">Inserir</string>
    <string name="atualizar">Atualizar</string>
    <string name="apagar">Apagar</string>
    <string name="consultar">Consultar</string>

    <string-array name="tipo_pacote">
        <item>Promocional</item>
        <item>Padrao</item>
    </string-array>

    <string-array name="status_pedido">
        <item>Realizado</item>
        <item>Atendido</item>
        <item>Pronto</item>
    </string-array>

    <string name="spinner_header">Teste</string>
    <string name="total_pedidos_menu_lista_produtos">Total Pedidos: %1$s</string>
    <string name="valor_total_pedido_pago">Valor Total: %1$s</string>
    <string name="tempo_total_pronto_pedido_pago">Tempo Total: %1$s</string>
    <string name="pedido_produto_cliente">Pedido Produto Cliente</string>



    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Acompanhamento Pedidos</item>
        <item >Histórico de Pedidos</item>
        <item >Configurações</item>
        <item >Contato</item>
    </string-array>

</resources>
