<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:orientation="vertical"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#015488">

        <TextView
            android:id="@+id/fazer_pedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="80dp"
            android:clickable="true"
            android:drawableTop="@drawable/fazer_pedido"
            android:onClick="selecionarOpcao"
            android:text="@string/fazer_pedido"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/acompanhar_pedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/fazer_pedido"
            android:layout_marginRight="50dp"
            android:clickable="true"
            android:drawableTop="@drawable/rastreio"
            android:onClick="selecionarOpcao"
            android:text="@string/acompanhar_pedido"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/avaliar_estabelecimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/fazer_pedido"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="120dp"
            android:clickable="true"
            android:drawableTop="@drawable/avaliar"
            android:onClick="selecionarOpcao"
            android:text="@string/avaliar_estabelecimento"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/desconto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/avaliar_estabelecimento"
            android:layout_alignRight="@id/acompanhar_pedido"
            android:clickable="true"
            android:drawableTop="@drawable/desconto"
            android:onClick="selecionarOpcao"
            android:text="@string/ofertas"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />



    </RelativeLayout>

</LinearLayout>