<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffee01"
        android:text="FUNCIONÁRIO LOGIN"
        android:layout_gravity="center_horizontal"
        android:textStyle="normal|bold|italic"
        android:textSize="30dp"
        android:textIsSelectable="false" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo_new"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffee01"
        android:text="@string/usuario"
        android:textStyle="bold"
        android:layout_gravity="center" />
    <EditText
        android:id="@+id/usuario"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:inputType="text"
        android:text="leitor"
        android:textSize="30dp"
        android:layout_gravity="center">
        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffee01"
        android:text="@string/senha"
        android:textStyle="bold"
        android:layout_gravity="center" />
    <EditText
        android:id="@+id/senha"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:inputType="textPassword"
        android:text="123"
        android:textSize="30dp"
        android:layout_gravity="center" />
    <CheckBox
        android:id="@+id/manterConectado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manter_conectado"
        android:textColor="#ffffee01"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="entrarOnClick"
        android:text="@string/entrar"
        android:textSize="30dp" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/activity_rodape"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
</ScrollView>