<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.edu.ifpe.pdm.cardapiolanches.view.admin.ProdutoActivityCRUD"
    android:background="@drawable/background">

    <!--Nome Produto-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Login: "
            android:textColor="#ffffee01"
            android:textStyle="normal|bold" />

        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/login"
            android:inputType="text"
            android:text="garcom1"
            android:textColor="#ffffffff"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <!--SENHA-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Senha: "
            android:textColor="#ffffee01"
            android:textStyle="normal|bold" />

        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/senha"
            android:inputType="numberDecimal"
            android:text="12345"

            android:textColor="#ffffffff"
            android:textStyle="normal|bold" />
    </LinearLayout>
    <!--Tipo-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Tipo de Funcionario: "
            android:textColor="#ffffee01"
            android:textStyle="normal|bold" />

        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tipo_funcionario"
            android:inputType="text"
            android:text="1"

            android:textColor="#ffffffff"
            android:textStyle="normal|bold" />
    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/inserir"
            android:layout_weight="1"
            android:onClick="buttonInsertClick"
            android:textStyle="normal|bold" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/atualizar"
            android:layout_weight="1"
            android:onClick="buttonUpdateClick"

            android:textStyle="normal|bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/consultar"
            android:layout_weight="1"
            android:onClick="buttonQueryClick"
            android:textStyle="normal|bold" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/apagar"
            android:layout_weight="1"
            android:onClick="buttonDeleteClick"
            android:textStyle="normal|bold" />
    </LinearLayout>


</LinearLayout>
