<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.edu.ifpe.pdm.cardapiolanches.view.admin.ProdutoActivityCRUD"
    android:background="@drawable/background">

<!--Nome Produto-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Nome do Produto: "
            android:textColor="#ffffee01"
            android:textStyle="normal|bold" />

        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/nome"
            android:inputType="text"
            android:textColor="#ffffffff"
            android:textStyle="normal|bold" />
    </LinearLayout>

<!--Preço-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Preço: "
            android:textColor="#ffffee01"
            android:textStyle="normal|bold" />

        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/preco"
            android:inputType="numberDecimal"
            android:text="0.0"

            android:textColor="#ffffffff"
            android:textStyle="normal|bold" />
    </LinearLayout>
    <!--Descrição-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Descrição: "
            android:textColor="#ffffee01"
            android:textStyle="normal|bold" />

        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/descricao"
            android:inputType="text"

            android:textColor="#ffffffff"
            android:textStyle="normal|bold" />
    </LinearLayout>
<!--Imagem Produto-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Imagem do produto: "
            android:textColor="#ffffee01"
            android:textStyle="normal|bold" />

        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/nome_imagem"
            android:inputType="text"

            android:textColor="#ffffffff"
            android:textStyle="normal|bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Tempo de Entrega: "
            android:textColor="#ffffee01"
            android:textStyle="normal|bold" />

        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tempo_pronto_produto"
            android:inputType="number"
            android:text="0"

            android:textColor="#ffffffff"
            android:textStyle="normal|bold" />
    </LinearLayout>
    <!--Categoria-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Categoria: "
            android:textColor="#ffffee01"
            android:textStyle="normal|bold" />

        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/categoria"
            android:inputType="text"

            android:textColor="#ffffffff"
            android:textStyle="normal|bold" />
    </LinearLayout>
<!--Unidade em Estoque-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Unidade em Estoque: "
            android:textColor="#ffffee01"
            android:textStyle="normal|bold" />

        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/unidade_estoque"
            android:inputType="number"
            android:text="0"

            android:textColor="#ffffffff"
            android:textStyle="normal|bold" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
          android:text="@string/inserir"
            android:layout_weight="1"
            android:onClick="buttonInsertClick"
            android:textStyle="normal|bold" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/atualizar"
            android:layout_weight="1"
            android:onClick="buttonUpdateClick"

            android:textStyle="normal|bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/consultar"
            android:layout_weight="1"
            android:onClick="buttonQueryClick"
            android:textStyle="normal|bold" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/apagar"
            android:layout_weight="1"
            android:onClick="buttonDeleteClick"
            android:textStyle="normal|bold" />
    </LinearLayout>


</LinearLayout>
