<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.edu.ifpe.pdm.cardapiolanches.view.admin.PedidoActivityCRUD">


    <!--Id do Pedido-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Id do pedido: " />

        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/id_pedido"
            android:inputType="number"
            android:numeric="integer"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Numero do pedido: " />

        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/id_num_pedido"
            android:inputType="number"
            android:numeric="integer"
            />
    </LinearLayout>


    <!--Numero_Mesa-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Numero da Mesa: " />

        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/numero_mesa"
            android:inputType="number"
            android:numeric="integer"
            android:text="5"
            />
    </LinearLayout>

    <!--Quantidade-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Quantidade: " />

        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/quantidade_pedido"
            android:inputType="number"
            android:text="1"

            />
    </LinearLayout>

    <!--Total-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Total Pedido: " />

        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/total_pedido"
            android:inputType="number"

            android:text="1"

            />
    </LinearLayout>

    <!--Status Pedido-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Status do Pedido: " />
        />

        <Spinner
            android:id="@+id/status_pedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_header"
        > <!-- representa quando o titulo a list quando opcoes da lista tive aberta -->
        </Spinner>
    </LinearLayout>

    <!--Produto -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Produto: " />

        />

        <Spinner
            android:id="@+id/produto_pedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_header"
          > <!-- representa quando o titulo a list quando opcoes da lista tive aberta -->
        </Spinner>
    </LinearLayout>


    <!--Pacote -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Pacote: " />

        />

        <Spinner
            android:id="@+id/pacote_pedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_header"
           > <!-- representa quando o titulo a list quando opcoes da lista tive aberta -->
        </Spinner>
    </LinearLayout>


    <!--Funcionario -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Funcionario: " />

        />

        <Spinner
            android:id="@+id/funcionario_pedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_header"
          > <!-- representa quando o titulo a list quando opcoes da lista tive aberta -->
        </Spinner>



    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/inserir"
            android:layout_weight="1"
            android:onClick="buttonInsertClick"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/atualizar"
            android:layout_weight="1"
            android:onClick="buttonUpdateClick"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/consultar"
            android:layout_weight="1"
            android:onClick="buttonQueryClick"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/apagar"
            android:layout_weight="1"
            android:onClick="buttonDeleteClick"
            />
    </LinearLayout>


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Nome Funcionario"
        android:layout_weight="1"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Buscar"
        android:layout_weight="1"
        android:onClick="buscarFuncionario"
        />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Nome Produto"
            android:layout_weight="1"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Buscar"
            android:layout_weight="1"
            android:onClick="buscarProduto"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Pacote"
            android:layout_weight="1"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Buscar"
            android:layout_weight="1"
            android:onClick="buscarPacote"
            />
    </LinearLayout>



</LinearLayout>
